--- a/package.json
+++ b/package.json
@@ -25,8 +25,6 @@
     "mocha": "^3.4.2"
   },
   "dependencies": {
-    "@josebarrios/creative-work": "^0.1.0",
-    "@josebarrios/thing": "^0.3.3",
-    "aggregation": "^1.2.0"
+    "@josebarrios/creative-work": "^0.1.0"
   }
 }
