--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@josebarrios/message",
-  "version": "0.1.2",
+  "name": "dc-message",
+  "version": "0.2.0",
   "description": "The most generic kind of creative work, including books, movies, photographs, software programs, etc.",
   "main": "index.js",
   "scripts": {
@@ -8,7 +8,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/JoseBarrios/message.git"
+    "url": "git+https://github.com/JoseBarrios/dc-message.git"
   },
   "keywords": [
     "creative",
@@ -18,13 +18,13 @@
   "author": "JoseBarrios",
   "license": "UNLICENSED",
   "bugs": {
-    "url": "https://github.com/JoseBarrios/message/issues"
+    "url": "https://github.com/JoseBarrios/dc-message/issues"
   },
-  "homepage": "https://github.com/JoseBarrios/message#readme",
+  "homepage": "https://github.com/JoseBarrios/dc-message#readme",
   "devDependencies": {
     "mocha": "^3.4.2"
   },
   "dependencies": {
-    "@josebarrios/creative-work": "^0.1.0"
+    "dc-creative-work": "^0.2.0"
   }
 }
